2004-04-06  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-row.c:
	* src/planner-task-tree.c:
	* src/planner-task-tree.h: Fix bug #132910, open task properties
	by double-clicking gantt bar and bug #132916, select task by
	clicking gantt bar. Patch from Chris Ladd.
	
2004-04-04 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-tree.c: implemented task remove undo
	Currently recovers the task, the position in the tasks tree 
	the task relations and the resources assignments.

2004-03-29  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-old-xml.c (old_xml_read_assignment): Be more
	robust.

	* src/planner-gantt-row.c (gantt_row_event): Patch from Doroszlai
	Attila to fix popup position.

	* src/planner-gantt-model.c: (gantt_model_get_column_type),
	(gantt_model_get_value):
	* src/planner-gantt-model.h:
	* src/planner-gantt-view.c: (gantt_view_create_widget):
	* src/planner-task-tree.c: (task_tree_wbs_data_func),
	(task_tree_add_column):
	* src/planner-task-view.c: (get_widget): Clean up wbs patch,
	change id to wbs.

2004-03-27  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-group-model.c:
	project object ref
	disconnect signals when destroying the model
	code cleaning in destroy function
	* src/planner-resource-view.c: cleaned unused variable
	* src/planner-resource-dialog.c: (resource_dialog_email_changed_cb)
	corrected string g_value (detected by Lincoln Phipps)
		
2004-03-26  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-print.c: (planner_gantt_print_do),
	(planner_gantt_print_data_new):
	* src/planner-table-print-sheet.c:
	(table_print_sheet_print_header_cell),
	(table_print_sheet_print_cell), (table_print_sheet_create_column),
	(table_print_sheet_foreach_row), (table_print_sheet_create_pages),
	(planner_table_print_sheet_new), (planner_table_print_sheet_free):
	Don't indent the first column, indent the one with the
	expander. Fixes printing with the WBS column.

2004-03-26  Richard Hult  <richard@imendio.com>